added properties files

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <project.build.target>1.8</project.build.target>
 
         <postgres.version>42.2.8</postgres.version>
+        <resteasy.version>3.9.3.Final</resteasy.version>
     </properties>
 
     <dependencies>
@@ -22,6 +23,21 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>${postgres.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-client</artifactId>
+            <version>${resteasy.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxrs</artifactId>
+            <version>${resteasy.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jackson-provider</artifactId>
+            <version>${resteasy.version}</version>
         </dependency>
     </dependencies>
 
